Minor alignment fix

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -30,9 +30,9 @@ body {
 }
 
 .text-vertical-center h2 {
-    margin: 0;
+    margin: 8.0em;
     padding: 0;
-    font-size: 4.0em;
+    font-size: 3.0em;
     font-weight: 300;
 	text-align: right;
 }
